unpackaged/main/default/objects/Medications__c/Medications__c.object-meta.xml
<CustomObject>
    <description>Medications that have been prescribed to the Patient</description>
    <label>Medications</label>
    <nameField>
        <label>Medication</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>