unpackaged/main/default/objects/Medications__c/fields/Allergy_Information__c.field-meta.xml
<CustomField>
    <fullName>Allergy_Information__c</fullName>
    <label>Allergy Information</label>
    <type>TextArea</type>
</CustomField>