unpackaged/main/default/objects/Medications__c/fields/Allergy_Warning__c.field-meta.xml
<CustomField>
    <fullName>Allergy_Warning__c</fullName>
    <description>Are there any allergies related to this prescription that the patient must be informed about, eg peanut allergy?</description>
    <inlineHelpText>Are there any allergies related to this prescription that the patient must be informed about, eg peanut allergy?</inlineHelpText>
    <label>Allergy Warning?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>