unpackaged/main/default/objects/Medications__c/fields/Bundle_Contents__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Contents__c</fullName>
    <description>If the medication is a bundle item, this field lists the comma separated SKUs that make up the bundle</description>
    <inlineHelpText>If the medication is a bundle item, this field lists the comma separated SKUs that make up the bundle</inlineHelpText>
    <label>Bundle Contents</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>