unpackaged/main/default/objects/Medications__c/fields/Dosage_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Dosage_Frequency__c</fullName>
    <description>Frequency of the dosage eg. once weekly</description>
    <inlineHelpText>Frequency of the dosage eg. once weekly</inlineHelpText>
    <label>Dosage Frequency</label>
    <length>60</length>
    <type>Text</type>
</CustomField>