unpackaged/main/default/objects/Medications__c/fields/Dosage_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Dosage_Instruction__c</fullName>
    <description>Prescription dosage eg 0.5mls</description>
    <inlineHelpText>Prescription dosage eg 0.5mls</inlineHelpText>
    <label>Dosage Instruction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>