unpackaged/main/default/objects/Medications__c/fields/Number_of_Repeats_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Repeats_Allowed__c</fullName>
    <label>Number of Repeats Allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>