unpackaged/main/default/objects/Medications__c/fields/Off_Licence__c.field-meta.xml
<CustomField>
    <fullName>Off_Licence__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the medication prescribed off licence?</description>
    <inlineHelpText>Is the medication prescribed off licence?</inlineHelpText>
    <label>Off Licence?</label>
    <type>Checkbox</type>
</CustomField>