unpackaged/main/default/objects/Medications__c/fields/Pharmacy_global__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_global__c</fullName>
    <label>Pharmacy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pharmacies</valueSetName>
    </valueSet>
</CustomField>