unpackaged/main/default/objects/Medications__c/fields/PIL_Required__c.field-meta.xml
<CustomField>
    <fullName>PIL_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do we need to send a Patient Information Leaflet (PIL) to the patient?</description>
    <inlineHelpText>Do we need to send a Patient Information Leaflet (PIL) to the patient?</inlineHelpText>
    <label>PIL Required?</label>
    <type>Checkbox</type>
</CustomField>