unpackaged/main/default/objects/Medications__c/fields/Reorder_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Reorder_Frequency__c</fullName>
    <label>Re-order Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Demand</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>1-2 months</fullName>
            </value>
            <value>
                <fullName>2 months</fullName>
            </value>
            <value>
                <fullName>2-3 months</fullName>
            </value>
            <value>
                <fullName>3-4 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>