unpackaged/main/default/objects/Medications__c/fields/Repeats_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Repeats_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Repeats Allowed?</label>
    <type>Checkbox</type>
</CustomField>