unpackaged/main/default/objects/Medications__c/validationRules/If_Repeats_Allowed_No_of_Repeats_req.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Repeats_Allowed_No_of_Repeats_req</fullName>
    <active>true</active>
    <description>Requires a value in Number of Repeats if Medication allows repeats</description>
    <errorConditionFormula>AND(OR(Number_of_Repeats_Allowed__c =0,ISBLANK(Number_of_Repeats_Allowed__c)), Repeats_Allowed__c = true)</errorConditionFormula>
    <errorDisplayField>Number_of_Repeats_Allowed__c</errorDisplayField>
    <errorMessage>Number of Repeats Allowed must be completed if Repeats Allowed is TRUE</errorMessage>
</ValidationRule>