unpackaged/main/default/objects/Medications__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Available__c</columns>
    <columns>Default_Quantity__c</columns>
    <columns>Dosage_Instruction__c</columns>
    <columns>Reorder_Frequency__c</columns>
    <columns>Pharmacy_global__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>